# c-bot

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter.yml
src/c_bot/: __init__.py  c_bot.py  interpreter.py
src/c_bot/config/: configuration.yaml
src/c_bot/static/css/: app.css
src/c_bot/static/js/: app.js
src/seeingllama2/: __init__.py  __main__.py  routes.py
src/seeingllama2/config/: configuration.yaml  prompt.txt
src/seeingllama2/database/: models.py
src/seeingllama2/main/: __init__.py  colors.py  dialog_manager.py  events.py  interpreter.py  routes.py  utils.py  voice.py
src/seeingllama2/main/large_language_models/: __init__.py  connectors.py  oobabooga_connector.py
src/seeingllama2/templates/: index.htm
