[build-system]
requires = [
    "setuptools>=65.5.1",
    "wheel",
    "eventlet==0.33.3",
    "Flask==2.2.5",
    "Flask_SocketIO==5.3.1",
    "pyttsx4==3.0.15",
    "PyYAML==6.0.1",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
