[metadata]
name = seeingllama2
version = 0.0.5
author = Vincent Stragier
author_email = vincent.stragier@outlook.com
description = A Python interactive agent for visually impaired and blind individuals.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.amisdesaveugles.org/comingsoon/
project_urls =
    Bug Tracker = https://www.amisdesaveugles.org/comingsoon/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4

install_requires =
    eventlet==0.33.3
    Flask==2.2.5
    Flask_SocketIO==5.3.1
    pyttsx4==3.0.15
    PyYAML==6.0.1
    setuptools==65.5.0

[options.packages.find]
where = src

[options.package_data]
* =
    config/*
    static/css/*
    static/css/libs/*
    static/js/*
    static/js/libs/*
    static/img/*
    templates/*
