[metadata]
name = seeingllama2
version = 0.0.6
description = A Python interactive agent for visually impaired and blind individuals.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.amisdesaveugles.org/comingsoon/
author = Vincent Stragier
author_email = vincent.stragier@outlook.com
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
project_urls =
    Bug Tracker = https://github.com/Vincent-Stragier/c-bot/

[options]
packages = find:
install_requires =
    Flask==2.2.5
    Flask-SocketIO==5.3.1
    PyYAML==6.0.1
    eventlet==0.33.3
    pyttsx4==3.0.15
    setuptools>=65.5.1
python_requires = >=3.10, <4
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    seeingllama2 = seeingllama2.__main__:main

[options.package_data]
* =
    config/*
    static/css/*
    static/css/libs/*
    static/js/*
    static/js/libs/*
    static/img/*
    templates/*
